<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="24dp"
    android:paddingStart="24dp">

    <!-- File size -->
    <com.echsylon.optimus.app.InfoView_
        android:id="@+id/file_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:label="@string/file_size"
        app:textType="singleline"/>

    <!-- Char count -->
    <com.echsylon.optimus.app.InfoView_
        android:id="@+id/char_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:label="@string/char_count"
        app:textType="singleline"/>

    <!-- Duration -->
    <com.echsylon.optimus.app.InfoView_
        android:id="@+id/duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:label="@string/duration"
        app:textType="singleline"/>

</LinearLayout>